--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
       <div class="logo">AdaptX</div>
       <div class="nav-links">
-        <a href="home.html" class="active">HOME</a>
+        <a href="index.html" class="active">HOME</a>
         <a href="about.html">About us</a>
         <a href="featurepage.html">Accessibility Features</a>
         <a href="guidelines.html">Resources</a>
